# a1_setup_ubuntu20

./: README.md  a1_setup_first.sh  a1_setup_second.sh  moasetup.txt  noetic_setup.sh
unitree_guide/unitree_guide/: CMakeLists.txt
unitree_guide/unitree_guide/include/interface/: IOROS.h  IOSDK.h  KeyBoard.h
unitree_guide/unitree_guide/launch/: a1walk.launch
unitree_guide/unitree_guide/src/: main.cpp
unitree_guide/unitree_guide/src/interface/: IOROS.cpp  IOSDK.cpp  KeyBoard.cpp
unitree_ros/unitree_gazebo/worlds/: earth.world
unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt  package.xml
unitree_ros_to_real/unitree_legged_real/include/: body.h  convert.h
unitree_ros_to_real/unitree_legged_real/launch/: asibumi.launch  baran.launch  baran2.launch  baran3.launch  baran4.launch  hokou.launch  standtest.launch
unitree_ros_to_real/unitree_legged_real/src/test/: A1_asibumi.cpp  A1_baran.cpp  A1_baran2.cpp  A1_baran3.cpp  A1_baran4.cpp  A1_hokou.cpp  A1_stand.cpp  a1stop.py  ardui_pub.py  cona1.py  imu2tf_converter.cpp  joytest.cpp  joytwist.cpp  keyconfig.py  pub_test.cpp  sub_test.cpp
